Segundo commit terminado

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,10 @@
   </head>
   <body>
     <div class="carta">
-      <span class="top-suit">&spades;</span>
+      <span id="pinta1" class="top-suit">&spades;</span>
       <span class="number">7</span>
-      <span class="bottom-suit">&spades;</span>
+      <span id="pinta2" class="bottom-suit">&spades;</span>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
